# CVReform

./: .env.example  .gitignore  CVReform_MVP.md  LICENSE  README.md  pyproject.toml  run.ps1  setup.ps1  test.html
app/: __init__.py  config.py  main.py
app/prompts/: __init__.py  cv_to_html.py
app/routers/: health.py  uploads.py
app/schemas/: __init__.py  cv_html.py
app/services/: __init__.py  cv_processing.py  cv_reconstruction.py  document_asset_extractor.py  document_converter.py  document_link_extractor.py  openai_client.py  pdf_page_renderer.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: cvApi.ts
frontend/src/components/: CVPreview.tsx  SiteHeader.tsx
frontend/src/pages/: CVResultPage.tsx  CVUploadPage.tsx
frontend/src/types/: cv.ts
tests/: __init__.py  test_config.py  test_cv_html_schema.py  test_cv_processing.py  test_cv_reconstruction.py  test_cv_to_html_prompt.py  test_document_asset_extractor.py  test_document_converter.py  test_document_link_extractor.py  test_manual_document_asset_extractor.py  test_openai_client.py  test_pdf_page_renderer.py  test_uploads.py
