[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cvreform"
version = "0.1.0"
description = "Convert DOCX and PDF CVs into editable, style-preserving web documents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "openai>=2.0,<3.0",
    "pikepdf>=10.10,<11.0",
    "pillow>=12.0,<13.0",
    "pymupdf>=1.26,<2.0",
    "pydantic-settings>=2.10,<3.0",
    "python-multipart>=0.0.20,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.3,<9.0",
    "ruff>=0.11,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
markers = [
    "manual: tests that use private developer-provided files and run only when enabled",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
